# qtwidgetsextra

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  QEmbedableButton.cpp  QOpenFileButton.cpp  QOpenFileLineEdit.cpp  QOpenFileLineEdit.h  QOpenFolderLineEdit.cpp  QtWidgetsExtra.cpp  QtWidgetsExtra.h  README.md  TODO.md  qopenfile.pri  qtwidgetsextra.pro
generator/: CMakeLists.txt  Generator.cpp  Generator.h  GeneratorDelegate.cpp  GeneratorDelegate.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  generator.pro  main.cpp
qtwidgetsextra/: CMakeLists.txt  QEmbedableButton.cpp  QEmbedableButton_p.h  QOpenFileButton.cpp  QOpenFileButton.h  QOpenFileButtonPlugin.cpp  QOpenFileButtonPlugin.h  QOpenFileLineEditPlugin.cpp  QOpenFileLineEditPlugin.h  QOpenFolderButton.h  QOpenFolderLineEdit.h  QOpenFolderLineEditPlugin.cpp  QOpenFolderLineEditPlugin.h  QSaveFileButton.cpp  QSaveFileButton.h  QSaveFileLineEditPlugin.h  QtWidgetsExtra.cpp  QtWidgetsExtra.h  QtWidgetsExtraCache.cpp  QtWidgetsExtraCache.h  qopenfolder.pri  qsavefile.pri  qtwidgetsextra.pro
qtwidgetsextra/QtWidgetsExtra/: QAbstractButtonLineEdit.cpp  QAbstractButtonLineEdit.h  QEmbedableButton.cpp  QEmbedableButton_p.h  QKeySequenceRevealerFilter.cpp  QKeySequenceRevealerFilter.h  QtWidgetsExtraCache.cpp  QtWidgetsExtraCache.h
qtwidgetsextra/abstract/: QAbstractButtonLineEdit.cpp  QAbstractButtonLineEdit.h
qtwidgetsextra/additional/: QCollapsibleFramePlugin.cpp  QShape.cpp  QShapePlugin.cpp  QUpDownButton.cpp  QUpDownButton.h  QUpDownButtonPlugin.cpp  QUpDownButtonPlugin.h  additional.pri
qtwidgetsextra/buttongroupbox/: QAbstractButtonListModel.h  QButtonGroupBox.cpp  QButtonGroupBoxPlugin.cpp  buttongroupbox.pri
qtwidgetsextra/color/: QColorAction.cpp  QColorAction.h  QColorComboBox.cpp  QColorComboBox.h  QColorComboBoxPlugin.cpp  QColorComboBoxPlugin.h  QColorLineEdit.cpp  QColorLineEdit.h  QColorLineEditPlugin.cpp  QColorLineEditPlugin.h  QColorListModel.cpp  QColorListModel.h  QColorListView.h  QColorListViewPlugin.cpp  QColorListViewPlugin.h  QColorPushButton.cpp  QColorPushButton.h  QColorPushButtonPlugin.cpp  QColorPushButtonPlugin.h  QColorToolButton.cpp  QColorToolButton.h  QColorToolButtonPlugin.cpp  (+2 more)
runner/: CMakeLists.txt  main.cpp  runner.pro
tests/: designer-qt5.sh
(+112 files in other folders)
